# ros2-mpc

./: .gitignore  LICENSE  README.md
rooster/: package.xml  setup.cfg  setup.py
rooster/config/vehicles/: niki_parameters.yaml
rooster/config/worlds/: small_oval_rooster_beta.mat
rooster/launch/: exp.launch.py  rosbag.launch.py  sim.launch.py
rooster/rooster/: config.py  coordinator.py  interpolation.py  mpc_formulation.py  mpc_runner.py  simulator.py  utils.py
rooster/scripts/: generate_solver.py
rooster_msgs/: CMakeLists.txt  LICENSE  package.xml
rooster_msgs/msg/: NLPOutput.msg  NLPResult.msg  NLPSetup.msg
rooster_msgs/srv/: NLPService.srv
rooster_viz/: package.xml  setup.cfg  setup.py
rooster_viz/config/: rooster_viz.rviz
rooster_viz/launch/: rooster_viz.launch.py
rooster_viz/rooster_viz/: plot_dialogs.py  plot_utils.py  ros_plot_utils.py  rosbag_parser.py
rooster_viz/scripts/: rooster_plot.py
