<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rooster</name>
  <version>0.0.2</version>
  <description>NMPC for vehicle control</description>
  <maintainer email="username@domain.com">Firstname Lastname</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_pytest</test_depend>

  <exec_depend>auto_msgs2</exec_depend>
  <exec_depend>rooster_msgs</exec_depend>
  <exec_depend>model_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
